--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pandas = "^2.2.3"
-icecream = "^2.1.3"
 geopy = "^2.4.1"
 ipykernel = "^6.29.5"
 matplotlib = "^3.9.2"
+tqdm = "^4.66.6"
 
 
 [build-system]
